--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,14 +2,14 @@
 
 $gray-300: #a3a3a3;
 $gray-400: #858585;
-$primary-400: #35596c;
-$primary-500: #0f2936;
-$primary-600: #091d2b;
-$primary-700: #051926;
-$primary-800: #060f14;
-$secondary-300: #7ac5d7;
-$secondary-500: #219ebc;
-$secondary-800: #00b5e0;
+$primary-400: #222;
+$primary-500: #151515;
+$primary-600: #121212;
+$primary-700: #111;
+$primary-800: #080808;
+$secondary-300: #ff7f50;
+$secondary-500: #e67248;
+$secondary-800: #cc6640;
 $tertiary-50: #fff8e6;
 $tertiary-100: #fff1cd;
 $quaternary-500: #fb8500;
